samples/_failures_safe/1761191052_e66db1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_27674862.c: In function ‘print_state’:
./samples/SAFE/__tmp_27674862.c:149:15: error: expected ‘;’ at end of input
  149 |         printf
      |               ^
      |               ;
./samples/SAFE/__tmp_27674862.c:149:9: error: expected declaration or statement at end of input
  149 |         printf
      |         ^~~~~~
./samples/SAFE/__tmp_27674862.c:149:9: error: expected declaration or statement at end of input
